<resources>
    <string name="app_name">Extrm Tasks</string>
    <string name="app_name_lite">xTasks</string>
    <string name="deone_corporation">deone corporation</string>
    <string name="bonjour">Bonjour!</string>
    <string name="connect_you">Connectez-vous pour continuer.</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_titre_de_la_tache">Enter your task title</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_description_de_la_tache">Enter your task description</string>
    <string name="enter_telephone">Enter your telephone</string>
    <string name="email">Email</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="process">process</string>
    <string name="ou">OU</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">have an account?</string>
    <string name="sign_up">Create your account</string>
    <string name="sign_in">Sign in</string>
    <string name="connectez_vous_avec_google">Connectez-vous avec Google</string>
    <string name="connectez_vous_avec_facebook">Connectez-vous avec Facebook</string>
    <string name="copyrigth_2022">Copyrigth 2022 - v0.1</string>
    <string name="bienvenue">Bienvenue!</string>
    <string name="entrez_vos_informations">Entrez vos informations</string>
    <string name="full_name">Full name</string>
    <string name="telephone">Telephone</string>
    <string name="titre_error">Error lors de la saisie du titre</string>
    <string name="description_error">Error lors de la saisie de la description</string>
    <string name="email_error">Error lors de la saisie de l\'email</string>
    <string name="comment_error">Error lors de la saisie du commentaire</string>
    <string name="motdepasse_error">Error lors de la saisie du mot de passe</string>
    <string name="fullname_error">Error lors de la saisie du nom complet</string>
    <string name="telephone_error">Error lors de la saisie du telephone</string>
    <string name="traitement_encours">Traitement encours, patientez!</string>
    <string name="connexion_error">Erreur lors de la connexion de l\'utilisateur!</string>
    <string name="authentication_failed">Erreur lors de l\'authentification de l\'utilisateur!</string>
    <string name="non">No</string>
    <string name="oui">Yes</string>
    <string name="ok">OK</string>
    <string name="sign_up_create">Create your account!</string>
    <string name="account_not_exist">Ce compte n\'existe pas, voulez vous créer un compte?</string>
    <string name="account_exist">Ce compte existe, voulez vous connecter?</string>
    <string name="create">Create</string>
    <string name="create_account_error">Erreur lors de la création de l\'utilisateur!</string>
    <string name="no_user">Pas utilisateur trouvé!</string>
    <string name="save_user_info_ok">Sauvegarde des informations de l\'utilisateur réussie!</string>
    <string name="add_task_ok">Sauvegarde de la tache réussie!</string>
    <string name="save_user_info_error">Erreur lors de la sauvegarde des informations de l\'utilisateur!</string>
    <string name="add_task_error">Erreur lors de la sauvegarde de la tache!</string>
    <string name="save_image_error">Erreur lors de la sauvegarde de l\'image de profil</string>
    <string name="save_task_image_error">Erreur lors de la sauvegarde de l\'image de la tâche</string>
    <string name="database_error">Database error!</string>
    <string name="ajouter_une_tache">Ajouter une tache</string>
    <string name="j_aime">J\'aime</string>
    <string name="commenter">Commenter</string>
    <string name="partager">Partager</string>
    <string name="item_avatar_image">Item avatar image</string>
    <string name="titre_de_la_tache">Titre de la tache</string>
    <string name="description_de_la_tache">Description de la tache</string>
    <string name="item_selected">Item selected</string>
    <string name="_107_commentaires">107 Commentaires</string>
    <string name="parametres">Parametres</string>
    <string name="search">Search</string>
    <string name="add_task">Add task</string>
    <string name="remplissez_les_champs_ci_dessous">Remplissez les champs ci-dessous</string>
    <string name="nouvelle_tache">Nouvelle tâche</string>
    <string name="enter_your_comment">Enter your commentaire</string>
    <string name="send_comment">Send commentaire</string>
    <string name="username">Nom de l\'utilisateur</string>
    <string name="_16_oct_2022">16 Oct. 2022</string>
    <string name="language">Language</string>
    <string name="display_mode">Display mode</string>
    <string name="groupe">Groupe</string>
    <string name="user_info">User informations</string>
    <string name="a_propos">A propos</string>
    <string name="_15_oct_2022">15 Oct. 2022</string>
    <string name="download_error">Erreur lors du chargement des données!</string>
    <string name="download_image_error">Erreur lors du chargement de l\'image!</string>
    <string name="dark">DARK</string>
    <string name="light">LIGHT</string>
    <string name="choisir_mode">Choose mode</string>
    <string name="anglais">ANGLAIS</string>
    <string name="arabe">ARABE</string>
    <string name="francais">FRANCAIS</string>
    <string name="choisir_langue">Choose language</string>
    <string name="user_name">User name</string>
    <string name="publication_s_date">publication\'s date</string>
    <string name="favoris">Favoris</string>
    <string name="comments">Commentaires</string>
    <string name="warning_message">LLes informations entrées seront définitivement perdues, voulez-vous quitter?</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="signout_message">Voulez-vous quitter l\'application?</string>
    <string name="delete_account_message">Voulez-vous supprimer vos informations et quitter l\'application?</string>
    <string name="accept_conditions_utilisation">J\'accepte toutes les conditions d\'utilisation</string>
    <string name="like_task">I love this task</string>
    <string name="this_task_is_my_favorite">This task is my favorite</string>
    <string name="this_task_location">Location\'s task</string>
    <string name="share_this_task">Share this task</string>
    <string name="supprimer">Supprimer</string>
    <string name="_48_j_aime">48 j\'aime</string>
    <string name="like">Likes</string>
    <string name="delete_task_ok">Deleting task success!</string>
    <string name="delete_task_message">Voulez-vous supprimer cette tache?</string>
    <string name="localise">Localise</string>
    <string name="_12_nov_2022">12 Nov. 2022</string>
    <string name="details">Details</string>
    <string name="show_contact">Show contact</string>
    <string name="_0">0</string>
    <string name="delete_task_error">Erreur lors de la suppression de la tâche!</string>
    <string name="appel">Appel</string>
    <string name="message">Message</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="description_de_l_utilisation">Desccription de l\'utilisation</string>
    <string name="date_de_cr_ation">Date de création</string>
    <string name="_237_6_77_81_40_03">+237 6 77 81 40 03</string>
    <string name="bloquer_utilisateur">Bloquer utilisateur</string>
    <string name="signaler_utilisateur">Signaler utilisateur</string>
    <string name="editer">Editer</string>
    <string name="choisir_option">Choose option</string>
    <string name="profile_photo">Avatar</string>
    <string name="cover_photo">Couverture</string>
    <string name="description">Description</string>
    <string name="enable_location_permissions">Please, enable location permissions.</string>
    <string name="enable_storage_permissions">Please, enable storage permissions.</string>
    <string name="enable_camera_permissions">Please, enable camera permissions.</string>
    <string name="enabled_camera_permissions">Camera permissions enabled</string>
    <string name="enabled_storage_permissions">Storage permissions enabled</string>
    <string name="enabled_location_permissions">Location permissions enabled</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="loading_task_image_error">Erreur lors du chargement de l\'image de la tâche!</string>
    <string name="loading_user_image_error">Erreur lors du chargement de l\'image de l\'utilisateur!</string>
    <string name="delete_image_error">Erreur lors de la suppression de l\'image!</string>
    <string name="update">Update</string>
    <string name="updated_ok">Updated success</string>
    <string name="updated_not_ok">Updated error</string>
    <string name="enter_the_new_value">Enter the new value</string>
    <string name="new_value">New value</string>
    <string name="dialog_title">New value for {0}</string>
    <string name="value_error">Erreur lors de la saisie de la valeur!</string>
    <string name="reason_error">Erreur lors de la saisie de la raison!</string>
    <string name="settings_item">Settings items</string>
    <string name="notifications_personnalisees">Notifications personnalisées</string>
    <string name="liste_des_taches">Liste des taches</string>
    <string name="_142">142</string>
    <string name="taches_notification">Tâches notiification</string>
    <string name="localise_la_tache">Localise la tâche</string>
    <string name="liste_signalements">Liste des signalements</string>
    <string name="_4">4</string>
    <string name="description_du_signalement">Description du signalement</string>
    <string name="mon_compte">Mon compte</string>
    <string name="notifications">Notifications</string>
    <string name="liste_des_mots_cle">Liste des mots clé</string>
    <string name="taches_key_words">Taches key words</string>
    <string name="donn_es_et_stockage">Données et stockage</string>
    <string name="confidentialit_et_securit">Confidentialité et sécurité</string>
    <string name="faq">FAQ</string>
    <string name="account_deleted_ok">Suppression du compte de l\'utilisateur!</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="country">country</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="city">City</string>
    <string name="ville_error">Erreur lors de la saisie de la ville!</string>
    <string name="pays_error">Erreur lors de la saisie du pays!</string>
    <string name="conditions_utilisation">Conditions d\'utilisation</string>
    <string name="titre_de_la_condition">titre de la condition</string>
    <string name="description_de_la_condition">description de la condition</string>
    <string name="autorisations">Autorisations</string>
    <string name="verif_entries">Vérification des donées saisies, Patientez!</string>
    <string name="user_auth">Authentification de l\'utilisateur</string>
    <string name="mep_creating_account">Mise en place des élément de création du compte de l\'utilisateur, Patientez!</string>
    <string name="verif_if_account_exist">Vérification de l\'existance de l\'utilisateur dans le système, Patientez!</string>
    <string name="init_task_id">Intialisation de l\'identifiant de la tâche</string>
    <string name="locate_task">Localisation de la tâche</string>
    <string name="save_task_image">Sauvegarde de l\'image de la tâche</string>
    <string name="save_task_data">Sauvegarde des données de la tâche</string>
    <string name="adresse_de_la_tache">Adresse de la tache</string>
    <string name="cover">Cover</string>
    <string name="titre">Titre</string>
    <string name="localisation">Localisation</string>
    <string name="title_update">Mise à jour - {0}</string>
    <string name="liste_des_autorisations_n_cessaires">Liste des autorisations nécessaires</string>
</resources>