<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_color"
    tools:context=".NewActivity">

    <TextView
        android:id="@+id/tvOneNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/bienvenue"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTwoNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOneNew"
        android:layout_centerHorizontal="true"
        android:text="@string/entrez_vos_informations"
        android:textColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTwoNew"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvEmailNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvLoginNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmailNew"
                android:drawableEnd="@drawable/ic_action_login"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvMotdepasseNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etvLoginNew"
                android:layout_marginTop="10dp"
                android:text="@string/motdepasse"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvMotdepasseNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMotdepasseNew"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_action_motdepasse"
                android:hint="@string/enter_password"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvFullNameNew"
                android:layout_below="@+id/etvMotdepasseNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/full_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvFullNameNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFullNameNew"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvTelephoneNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etvFullNameNew"
                android:layout_marginTop="10dp"
                android:text="@string/telephone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvTelephoneNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTelephoneNew"
                android:hint="@string/enter_telephone"
                android:inputType="phone"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvVilleNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etvTelephoneNew"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvVilleNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVilleNew"
                android:hint="@string/enter_your_city"
                android:inputType="phone"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvPaysNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etvVilleNew"
                android:layout_marginTop="10dp"
                android:text="@string/country"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etvPaysNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPaysNew"
                android:hint="@string/enter_your_country"
                android:inputType="phone"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvConditionsNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etvPaysNew"
                android:layout_marginTop="10dp"
                android:text="@string/conditions_utilisation"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvConditionsNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvConditionsNew"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_condition" />

            <CheckBox
                android:id="@+id/cbAcceptRulesNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvConditionsNew"
                android:text="@string/accept_conditions_utilisation"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btCreateAccountNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbAcceptRulesNew"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_rounder"
                android:text="@string/create" />

            <RelativeLayout
                android:gravity="center"
                android:id="@+id/rlRegister"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/btCreateAccountNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvRegisterOneNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvSignInNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvRegisterOneNew"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>