<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_color"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="25dp"
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/deone_corporation"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvBonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/bonjour"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBonjourTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBonjour"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_you"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBonjourTwo"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_rounder_top"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:drawableEnd="@drawable/ic_action_login"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tvMotdepasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etvLogin"
            android:layout_marginTop="10dp"
            android:text="@string/motdepasse"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etvMotdepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMotdepasse"
            android:drawableEnd="@drawable/ic_action_motdepasse"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/btProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etvMotdepasse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_rounder"
            android:text="@string/process" />

        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btProcess"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvRegisterOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tvRegisterOne"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_circle"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ou"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/connectez_vous_avec_google"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGoogle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/connectez_vous_avec_facebook"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFacebook"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/copyrigth_2022"
            android:textColor="@color/black" />

    </RelativeLayout>

</RelativeLayout>